--- a/utils/utils-common/pom.xml
+++ b/utils/utils-common/pom.xml
@@ -19,6 +19,11 @@
 			<version>${commons_lang3}</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${commons_io}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>${fastjson_version}</version>
